# TailorTripAI

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml
api/: container.py  main.py  router.py
api/endpoints/: generate_schedule.py  generate_tags.py
api/schemas/: requests.py  response.py
api/services/: ai_service.py  scheduler_service.py
deployments/: Dockerfile  docker-compose.yaml
src/: config.json  container.py  main.py  router.py
src/endpoints/: generate_schedule.py  generate_tags.py
src/schemas/: requests.py
src/services/: ai_service.py  scheduler_service.py
